--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "devCommand": "npm run dev",
-  "env": [
-    "GEMINI_API_KEY"
-  ]
+  "devCommand": "npm run dev"
 }
