--- a/package.json
+++ b/package.json
@@ -1,12 +1,32 @@
 {
-  "name": "guia-de-boas-vindas",
-  "private": true,
-  "version": "0.0.0",
+  "name": "villa-verde-check-in",
+  "displayName": "Villa Verde - Check-In Digital",
+  "description": "Aplicação digital moderna de check-in e guia para hospedes de pousadas",
+  "version": "1.0.0",
   "type": "module",
+  "private": true,
+  "keywords": [
+    "pousada",
+    "check-in",
+    "hospede",
+    "guia-digital",
+    "monte-verde",
+    "react",
+    "typescript"
+  ],
+  "author": "Tech Solutions",
+  "license": "MIT",
+  "homepage": ".",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seu-usuario/villa-verde-check-in"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit",
+    "lint": "tsc --noEmit && echo 'Type checking passed'"
   },
   "dependencies": {
     "@google/genai": "^1.31.0",
@@ -16,9 +36,18 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
-    "terser": "^5.31.0"
+    "terser": "^5.31.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.1"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
   }
 }
