--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
-VITE_GEMINI_API_KEY=your_gemini_api_key_here
+VITE_GEMINI_API_KEY=sua_chave_aqui
+
+# OpenWeather API Key (opcional, para clima mais preciso)
+# VITE_WEATHER_API_KEY=sua_chave_aqui
+
+# URLs de Produção (opcional)
+# VITE_API_URL=https://sua-api.com
+# VITE_APP_URL=https://sua-pousada.com
