--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "villa-verde-check-in",
-  "displayName": "Villa Verde - Check-In Digital",
+  "displayName": "Villa Monte Verde - Check-In Digital",
   "description": "Aplicação digital moderna de check-in e guia para hospedes de pousadas",
   "version": "1.0.0",
   "type": "module",
